k8s/ingress/kong-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong
  annotations:
    ingressclass.kubernetes.io/is-default-class: "false"
spec:
  controller: ingress-controllers.konghq.com/kong
