k8s/ingress/ingress-apps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps
  namespace: apps
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: apps.infrastructurepath.online
      http:
        paths:
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8080
          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8080
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 8080
