k8s/ingress/ingress-backstage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: backstage
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: backstage.infrastructurepath.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 7007
