k8s/ingress/ingress-kong-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-admin
  namespace: kong
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: kong-admin.infrastructurepath.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-kong-admin
                port:
                  number: 8001
