k8s/ingress/ingress-locust.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust
  namespace: locust
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: locust.infrastructurepath.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust
                port:
                  number: 8089
